updates and fixes for VOD for users with no subs, add failure notification

--- a/app/views/vod_subscriptions/index.html.haml
+++ b/app/views/vod_subscriptions/index.html.haml
@@ -4,7 +4,7 @@
   @allowed_hours = (1..12).to_a.map { |n| n.to_s.rjust(2, '0') }
   @allowed_minutes = (00..60).step(10).to_a.map { |n| n.to_s.rjust(2, '0') }
 
-  if @vod_subscription.present? && @vod_subscription.has_key?(:email) && @vod_subscription.email.version_id.present?
+  if @vod_subscription.present? && @vod_subscription.has_key?(:email) && @vod_subscription.email.version_id.present? && @vod_subscription.email.time.present?
     @email_hour = @vod_subscription.email.time[0,2].to_i 
     @email_hour = @email_hour - 12 if @email_hour > 12
     @email_hour = @email_hour.to_s.rjust(2, '0')
@@ -16,7 +16,7 @@
     @email_version_id = nil
   end
 
-  if @vod_subscription.present? && @vod_subscription.has_key?(:push) && @vod_subscription.email.version_id.present?
+  if @vod_subscription.present? && @vod_subscription.has_key?(:push) && @vod_subscription.push.version_id.present? && @vod_subscription.push.time.present?
     @push_hour = @vod_subscription.push.time[0,2].to_i
     @push_hour = @push_hour - 12 if @push_hour > 12 
     @push_hour = @push_hour.to_s.rjust(2, '0')
@@ -44,6 +44,6 @@
   = t('users.daily push notifications')
 
 - if @devices.present?
-  = render partial: 'form', locals: {type: "push", version_id: @push_version_id, hour: @push_hour, minute: @push_minute, meridian: @push_meridian }
+  = render partial: 'form', locals: {type: "push", version_id: @push_version_id, hour: @push_hour, minute: @push_minute, meridian: @push_meridian, versions: @versions_for_current_lang, allowed_hours: @allowed_hours, allowed_minutes: @allowed_minutes }
 - else
   %p= t('users.no devices')
