fixed firefox background on select, fixed mobile view

--- a/app/assets/stylesheets/_user_settings.sass
+++ b/app/assets/stylesheets/_user_settings.sass
@@ -51,7 +51,7 @@
 .vod_form, .vod_form_delete
   display: inline
   select
-    background-image: url(/assets/select_arrows.png)
+    background: url(image_url("select_arrows.png")) no-repeat 96% center
 .version
   margin-top: 1em
   p
