--- a/app/assets/stylesheets/mobile/_user_settings.sass
+++ b/app/assets/stylesheets/mobile/_user_settings.sass
@@ -108,5 +108,11 @@
 #font form label.faux_radio
   margin-top: 2px
 
+.vod_form
+  select#version_id
+    margin-left: 0
+    
+  select#hour, select#minute, select#meridian
+    width: 70px
 
 
