update kids page after translation strings returned and spanish assets provided, pull all t strings

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -131,7 +131,7 @@
     weight: normal
   line-height: 1
 
-.dynamic_menu .search input,
+.dynamic_menu .search input
   width: 100%
 
 .dynamic_menu table
