--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -4,11 +4,14 @@
   meta_url          = "#{request.protocol}#{request.host_with_port}#{request.fullpath}"
   i18n_image_dir  = ""
   i18n_css_class = "en"
+  prelaunch = false
   if (I18n.locale.to_s.eql?("es") or I18n.locale.to_s.eql?("es-ES")) then
     i18n_css_class = "es"
     i18n_image_dir = "/es"
     meta_url = "https://www.bible.com/ninos"
+    prelaunch = true
   end
+
 
 !!! 5
 %html
@@ -74,13 +77,14 @@
         = t('kids.free download')
 
       -# !App store buttons
-      .download
-        %a.download-ios{href: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8", style: "background: #111 url('/assets/campaigns/kids#{i18n_image_dir}/ios-appstore-badge.png') no-repeat center center"}
-          = t('kids.app store')
-        %a.download-play{href: "http://play.google.com/store/apps/details?id=com.bible.kids", style: "background: #111 url('/assets/campaigns/kids#{i18n_image_dir}/play-appstore-badge.png') no-repeat center center"}
-          = t('kids.google play')
-        %a.download-amazon{href: "http://www.amazon.com/gp/product/B00GURLC40", style: "background: #111 url('/assets/campaigns/kids#{i18n_image_dir}/amazon-appstore-badge.png') no-repeat center center"}
-          = t('kids.amazon')
+      - if not prelaunch
+        .download
+          %a.download-ios{href: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8", style: "background: #111 url('/assets/campaigns/kids#{i18n_image_dir}/ios-appstore-badge.png') no-repeat center center"}
+            = t('kids.app store')
+          %a.download-play{href: "http://play.google.com/store/apps/details?id=com.bible.kids", style: "background: #111 url('/assets/campaigns/kids#{i18n_image_dir}/play-appstore-badge.png') no-repeat center center"}
+            = t('kids.google play')
+          %a.download-amazon{href: "http://www.amazon.com/gp/product/B00GURLC40", style: "background: #111 url('/assets/campaigns/kids#{i18n_image_dir}/amazon-appstore-badge.png') no-repeat center center"}
+            = t('kids.amazon')
 
       -# !iPad hero screenshot
       - if not i18n_image_dir.present?
