--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -530,6 +530,8 @@ body.transition .moment
 // !Verse of the day moment
 
 .moment-vod
+  .mobile-hidden
+    display: none
 
   .moment-icon
     background-position: 0 0
