Remove twitter js

--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -11,11 +11,11 @@
   = yield :javascripts
 
 -#twitter remarketing
-%script{:type => "text/javascript", :src  => "//platform.twitter.com/oct.js"}
-%script{:type => "text/javascript"}
-  twttr.conversion.trackPid('l4p73');
+-# %script{:type => "text/javascript", :src  => "//platform.twitter.com/oct.js"}
+-# %script{:type => "text/javascript"}
+  -# twttr.conversion.trackPid('l4p73');
 
 %noscript
   %img{src: "https://www.facebook.com/tr?id=653608201382494&amp;ev=NoScript", height: "1", width: "1", style: "display:none;"}
-  %img{src: "https://analytics.twitter.com/i/adsct?txn_id=l4p73&p_id=Twitter", height: "1", width: "1", style: "display:none;"}
-  %img{src: "//t.co/i/adsct?txn_id=l4p73&p_id=Twitter", height: "1", width: "1", style: "display:none;"}
+  -# %img{src: "https://analytics.twitter.com/i/adsct?txn_id=l4p73&p_id=Twitter", height: "1", width: "1", style: "display:none;"}
+  -# %img{src: "//t.co/i/adsct?txn_id=l4p73&p_id=Twitter", height: "1", width: "1", style: "display:none;"}
