update one hope image for es

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -148,7 +148,7 @@
         %p.logos-copy
           = t('kids.partner.in partnership')
         %a{href: "http://onehope.net"}
-          = image_tag "campaigns/kids/logos-oh.png", class: "logos-oh", alt: t('kids.partner.one hope')
+          = image_tag "campaigns/kids#{i18n_image_dir}/logos-oh.png", class: "logos-oh", alt: t('kids.partner.one hope')
 
     -# !Retina JS
 
