--- a/app/views/layouts/settings.html.haml
+++ b/app/views/layouts/settings.html.haml
@@ -6,7 +6,7 @@
   = t('users.settings')
 
 - content_for :sidebar do
-  = render partial: "widgets/settings"
+  = render partial: "widgets/settings" if current_user.present?
 
 = render layout: "layouts/base" do
   
@@ -19,5 +19,5 @@
         = t('users.go to your profile')
 
   %article
-    = render partial: "users/mobile_menu", locals: {selected: @setting_selected}
+    = render partial: "users/mobile_menu", locals: {selected: @setting_selected} if current_user.present?
     = yield
