Downplayed the verse numbers cuz they've been driving me crazy for ages.

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -735,10 +735,11 @@ footer .publisher .courtesy + .blurb
   margin-left: 3px
 
 .verse > .label
-  color: $label_text
+  color: #777
   font:
     family: $body_font
-    weight: bold
+    weight: normal
+    size: 14px
   line-height: 1
   margin:
     top: 2px
