update BAFK page for es launch

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -13,7 +13,7 @@
     i18n_image_dir = "/es"
     meta_url = "https://www.bible.com/es/kids"
     facebook_locale = "es_ES"
-    prelaunch = true
+    # prelaunch = true
   end
 
 
