--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -314,8 +314,9 @@
 
 .icon_listen
   background:
-    image: image-url("icon_listen.png")
+    image: image-url("icon_listen@2x.png")
     position: center 3px !important
+    size: 16px 99px
   &:active,
   &:focus,
   .li_active &
@@ -324,8 +325,9 @@
 
 .icon_listen.disabled
   background:
-    image: image-url("icon_listen.png")
+    image: image-url("icon_listen@2x.png")
     position: center -80px !important
+    size: 16px 99px
 
 .icon_reader_settings
   background:
@@ -339,16 +341,18 @@
 
 .icon_parallel
   background:
-    image: image-url("icon_parallel.png")
-    position: center 3px !important
+    image: image-url("icon_parallel@2x.png")
+    position: center 4px !important
+    size: 15px 65px
   .parallel_mode &
     background:
       position: center -47px !important
 
 .icon_full_screen
   background:
-    image: image-url("icon_full_screen.png")
+    image: image-url("icon_full_screen@2x.png")
     position: 3px 4px !important
+    size: 17px 66px
   .full_screen &
     background:
       position: 4px -47px !important
@@ -366,13 +370,14 @@
 
 .icon_settings
   background:
-    image: image-url("icon_settings.png")
-    position: center 3px !important
+    image: image-url("icon_reader_settings@2x.png")
+    position: 2px 2px !important
+    size: 16px 99px
   &:active,
   &:focus,
   .li_active &
     background:
-      position: center -47px !important
+      position: 2px -80px !important
 
 dd .icon_settings
   background-repeat: no-repeat
