--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -536,8 +536,9 @@ article .reader-nav,
       float: left
 
     a
-      text-indent: -99999px
+      text-indent: 100%
       overflow: hidden
+      white-space: nowrap
       height: 44px
       width: 44px
       display: block
@@ -554,16 +555,20 @@ article .reader-nav,
     a.audio_btn
       background: image-url("icon_listen.png") center -36px no-repeat
       background-size: auto
-      text-indent: -99999px
+      text-indent: 100%
+      overflow: hidden
+      white-space: nowrap
       font-size: 0px
 
       span.icon_listen
         background: none
 
     a.reader_settings_btn
-      background: image-url("icon_reader_settings.png") center -36px no-repeat
+      background: image-url("icon_reader_settings.png") center -38px no-repeat
       background-size: auto
-      text-indent: -99999px
+      text-indent: 100%
+      overflow: hidden
+      white-space: nowrap
       font-size: 0px
 
       span.icon_reader_settings
