Nips and tucks around the site Turned off the nasty blue glow on inputs Tweaked the video page Tightened up the verse task toolbar on mobile

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -490,9 +490,9 @@
   z-index: 1
 
 #menu_verse_actions .pane
-  width: 568px
+  width: 570px
   background-color: #fff
-  border: 1px solid #cbc9cf
+  border-bottom: 1px solid #cbc9cf
   border-top: none
   padding: 15px
 
