--- a/app/assets/stylesheets/_formalize.sass
+++ b/app/assets/stylesheets/_formalize.sass
@@ -85,7 +85,7 @@ button:focus,
 input:focus,
 select:focus,
 textarea:focus,
-  +box-shadow(#06f 0 0 7px 0)
+  +box-shadow($green 0 0 0 0)
   // for Opera
   z-index: 1
 
