--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -444,3 +444,10 @@
   .settings-page-menu
     width: 300px
     float: left
+
+
+// !Sign in/up pages
+
+form[action="/sign-in"] input,
+form[action="/sign-up"] input
+  width: 300px
