--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -46,7 +46,7 @@
 
     .inner
       overflow: auto
-      padding: 20px
+      padding: 20px 40px
 
 #video-show,
 #video-series
@@ -170,7 +170,7 @@
     li.video
       float: left
       width: 400px
-      padding: 5px
+      padding: 0 0 5px
       margin: 0 30px 30px 0
       border: 0
       +video_container
