--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -339,7 +339,7 @@ input[type="text"]:active,
 input[type="time"]:active,
 input[type="url"]:active,
 input[type="week"]:active
-  border-color: $blue
+  border-color: $green
   // +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, $blue_light 0 0 5px 0, #eeedeb 0 0 0 5px)
   outline: 0 !important
 
@@ -507,6 +507,7 @@ input[type="submit"].action_button_red:active,
 
 input[type="submit"].action_button_grey,
 button.action_button_grey,
+a.action_button_grey,
 .action_button_grey
   background-color: #e6e6e6
   background-image: none
