--- a/app/assets/stylesheets/mobile/_users.sass
+++ b/app/assets/stylesheets/mobile/_users.sass
@@ -579,3 +579,11 @@ article.profile
 
 .mobile + h2
   display: none
+
+
+// !Sign in page
+
+form[action="/sign-in"] .small
+  font-size: 13px
+  margin: 10px 0 0
+  display: block
