--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -143,7 +143,8 @@ article.social-requests ul
     background: #fff
     display: none
     opacity: 0
-    +box-shadow(0px 0px 8px #777)
+    +box-shadow(4px 4px 0 rgba(0,0,0,.15))
+    border-left: #ccc
 
     .loading-indicator
       text-indent: 100%
