Styled page for no requests

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -6,7 +6,6 @@
 #main .social-feed-wrap.related
   padding-top: 56px
 
-#main article.social-requests,
 #main article.social-feed,
 #main div.social-feed,
 #main article.social-detail
@@ -18,7 +17,15 @@
   position: relative
 
 #main article.social-requests
-  padding-left: 0
+  padding: 120px 0 0
+
+  .blank-slate-friend-requests
+    background: image-url("icon-group-64.png") no-repeat center top
+    text-align: center
+    padding: 70px 0 0
+
+    p
+      font-size: 18px
 
 #main article.social-feed,
 #main div.social-feed
