yv-1541 allow comment deletion for any comments on moments I own

--- a/app/assets/stylesheets/_reader_text.sass
+++ b/app/assets/stylesheets/_reader_text.sass
@@ -181,7 +181,7 @@
     font-size: 1.03em
     font-weight: bold
     line-height: 1.2em
-    display: block
+    display: inline
     margin: 0 0 1em 0
     -webkit-font-smoothing: subpixel-antialiased
 
