Friends bug fixes

--- a/app/views/friends/index.html.haml
+++ b/app/views/friends/index.html.haml
@@ -12,7 +12,7 @@
     - if @friends.present?
       .friends-count
         %p.friends-count-have
-          = t("friends.you have N friends", count: @friends.count)
+          = t("friends.you have N friends", count: @friends_count.count)
         %span.friends-count-canhave
           = t("friends.limit notice")
         %span.friends-count-help
