--- a/app/views/friends/_list.html.haml
+++ b/app/views/friends/_list.html.haml
@@ -22,8 +22,8 @@
             %span.friend-detail-status You're friends!
           - elsif current_user.enable_friendships?
             = link_to(t("friendships.form.add friend button"), offer_friendships_path(user_id: friend.id) , method: :post, class: "friend-detail-add", title: "Send this person a friend request" )
-
-= link_to(t("moments.action.load more"),"#", id: "load-more", class: "dark", "data-next-url" => "#{_list_user_friends_path(user_id: @user.to_param, page: friends.next_page)}") if friends.next_page
+.load-more-link
+  = link_to(t("moments.action.load more"),"#", id: "load-more", class: "dark", "data-next-url" => "#{_list_user_friends_path(user_id: @user.to_param, page: friends.next_page)}") if friends.next_page
 
 :javascript
   $('#load-more').click(function (ev) {
