yv-1998 spinner updates

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -44,7 +44,10 @@
   background-color: #eee
 
 #spinner
-  margin: 134px 189px 300px
+  margin: 134px auto
+  background: image-url("feed-loading.gif") no-repeat
+  width: 128px
+  height: 128px
 
 // !Moment containers
 
