--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -45,7 +45,10 @@
   background-color: #eee
 
 #spinner
-  margin: 134px 189px 300px
+  margin: 134px auto
+  background: image-url("feed-loading.gif") no-repeat
+  width: 128px
+  height: 128px
 
 // !Moment containers
 body.transition .moment
